namespace Constants {
    public static class StringConstants {
        public const string IsMoving = "isMoving";
        public const string IsGrounded = "isGrounded";
        public const string IsWallSliding = "isWallSliding";
        public const string IsWallDetected = "isWallDetected";


        #region PlayerStateMachineStrings

        public const string Idle = "Idle";
        public const string Move = "Move";
        public const string Jump = "Jump";
        public const string YVelocity = "yVelocity";
        public const string WallSlide = "WallSlide";

        #endregion
    }
}